--- a/EMS.Data/EMS.Data.csproj
+++ b/EMS.Data/EMS.Data.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181203182413_forienkeytoproject.cs" />
+    <Compile Remove="Migrations\20181203182503_forienkeytoproject1.cs" />
+    <Compile Remove="Migrations\20181203183018_forienkeytoproject1.cs" />
+    <Compile Remove="Migrations\20181203183252_forienkeytoproject1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
